ligacao com heroko e testes

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Api usada para aprender restful APIs na arbyte",
   "main": "index.js",
   "scripts": {
-    "test": "npm test",
+    "test": "jest",
     "start": "nodemon -r dotenv/config server.js",
     "migration:create": "knex migrate:make",
     "migration:up": "knex migrate:latest",
@@ -29,6 +29,7 @@
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
+    "jest": "^26.1.0",
     "nodemon": "^2.0.4"
   }
 }
